--- a/app/views/neighborhoods/show.html.erb
+++ b/app/views/neighborhoods/show.html.erb
@@ -12,10 +12,13 @@
   <% @neighborhood.posts.each do |post| %>
     <li><strong><%= post.user.f_name %>:</strong> <%= post.content %> <%#= link_to 'View this post', neighborhood_post_path(@neighborhood, post) %></li>
     <% if post.replies %>
+      <ul>
       <% post.replies.each do |reply| %>
         <li> <%= reply.user.f_name %>: <%= reply.content %></li>
       <% end %>
+      </ul>
     <% end %>
+    <%#= link_to 'Reply to this post', new_neighborhood_post_reply(@neighborhood, @post) %>
   <% end %>
 </ul>
 
