--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -43,7 +43,7 @@
 
   <div class="field">
     <%= f.label :neighborhood %><br />
-    <%= f.text_field :neighborhood %>
+    <%= f.collection_select(:neighborhood_id, Neighborhood.all, :id, :name) %>
   </div>
 
   <div class="field">
