--- a/app/views/replies/new.html.erb
+++ b/app/views/replies/new.html.erb
@@ -1,16 +1,20 @@
 <h2>New Reply</h2>
 
-<p>You are posting as: <strong><%= current_user.f_name %> <%= current_user.l_name %></strong> to the post: <%= @post.content %> by <%= @post.user.f_name %></p>
+<p>You are replying as: <strong><%= current_user.f_name %> <%= current_user.l_name %></strong> to the post: "<%= @post.content %>" by <strong><%= @post.user.f_name %></strong></p>
 
 <%= form_for [@neighborhood, @post, @reply] do |f| %>
 
   <div class="field">
-    <%= f.label 'Content' %><br />
+    <!-- <%#= f.label 'Content' %><br /> -->
     <%= f.text_area :content %>
   </div>
+<!--
+  <div class="">
+    <%#= f.hidden_field :user_id, :value => current_user.id %>
+  </div> -->
 
   <div class="actions">
-    <%= f.submit "Sign up" %>
+    <%= f.submit "Post Reply" %>
   </div>
 
 <% end %>
