whitelisted params for users, posts, and replies

--- a/app/views/neighborhoods/show.html.erb
+++ b/app/views/neighborhoods/show.html.erb
@@ -24,6 +24,4 @@
   <% end %>
 </ul>
 
-  <!-- if post.replies
-  post.replies.each do |reply|
-   show all replies -->
+<%= link_to 'Create a new post', new_neighborhood_post_path(@neighborhood.id) %>
