--- a/app/views/neighborhoods/show.html.erb
+++ b/app/views/neighborhoods/show.html.erb
@@ -4,7 +4,7 @@
 
 <ul>
   <% @neighborhood.carpools.each do |carpool| %>
-    <li><%= carpool.name %> | <%= link_to 'View this carpool', neighborhood_carpool_path(@neighborhood, carpool) %></li>
+    <li><%= carpool.name %> | <%= link_to 'View this carpool', neighborhood_carpool_path(@neighborhood, carpool) %> <%#=link_to 'Join this carpool', neighborhood_carpool_path(@neighborhood, carpool)%></li>
   <% end %>
 </ul>
 
@@ -20,8 +20,10 @@
       <% end %>
       </ul>
     <% end %>
-    <%= link_to 'Reply to this post', new_neighborhood_post_reply_path(@neighborhood.id, post.id) %>
+    <%= render 'partials/form_reply' %>
+    <%#= link_to 'Reply to this post', new_neighborhood_post_reply_path(@neighborhood.id, post.id) %>
   <% end %>
 </ul>
 
-<%= link_to 'Create a new post', new_neighborhood_post_path(@neighborhood.id) %>
+<%#= link_to 'Create a new post', new_neighborhood_post_path(@neighborhood.id) %>
+<%= render 'partials/form_post' %>
