--- a/app/views/partials/_form_post.html.erb
+++ b/app/views/partials/_form_post.html.erb
@@ -1,7 +1,7 @@
 <%= form_for [@neighborhood, @post] do |f| %>
 
   <div class="field">
-    <%= f.label 'Content' %><br />
+    <%= f.label 'New Post' %><br />
     <%= f.text_area :content %>
   </div>
 
