--- a/app/views/neighborhoods/show.html.erb
+++ b/app/views/neighborhoods/show.html.erb
@@ -12,11 +12,15 @@
 
 <ul>
   <% @neighborhood.posts.each do |post| %>
-    <li><strong><%= post.user.f_name %>:</strong> <%= post.content %> <%#= link_to 'View this post', neighborhood_post_path(@neighborhood, post) %></li>
+    <li>
+      <strong><%= post.user.f_name %>:</strong> <%= post.content %> <%= link_to '| edit this post', edit_neighborhood_post_path(@neighborhood, post) if post.user == current_user %> <%= link_to '| delete this post', neighborhood_post_path(@neighborhood, post), method: :delete, data: {confirm: 'Are you sure?'} if post.user == current_user %>
+    </li>
     <% if post.replies %>
       <ul>
       <% post.replies.each do |reply| %>
-        <li> <strong><%= reply.user.f_name %>:</strong> <%= reply.content %></li>
+        <li>
+          <strong><%= reply.user.f_name %>:</strong> <%= reply.content %> <%= link_to '| edit this reply', edit_neighborhood_post_reply_path(@neighborhood, post, reply) if reply.user == current_user %> <%= link_to '| delete this reply', neighborhood_post_reply_path(@neighborhood, post, reply), method: :delete, data: {confirm: 'Are you sure?'} if reply.user == current_user %>
+        </li>
       <% end %>
       </ul>
     <% end %>
