--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,5 +1,9 @@
-<h1>Welcome to the GA carpool finder!</h1>
-<h4>Find other people commuting to GA from your neighborhood and form a carpool!</h4>
+<div class='welcome'>
+  <div class='welcome-headers'>
+    <h1>Welcome to the GA <!-- </h1> <div id='welcome-ga-logo'> <%= image_tag("ga_logo.png") %> </div> <h1>-->carpool finder!</h1>
+    <h4>Find other people commuting to GA from your neighborhood and form a carpool!</h4>
 
-<%= link_to 'Sign Up', new_user_registration_path %> |
-<%= link_to 'Log In', new_user_session_path %>
+    <%= link_to 'Sign Up', new_user_registration_path %> |
+    <%= link_to 'Log In', new_user_session_path %>
+  </div>
+</div>
