--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,13 +2,15 @@
 <html>
   <head>
     <title>Project2CarpoolApp</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
     <%= csrf_meta_tags %>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
   </head>
   <body>
 
-    <h5>This is where a nav bar will go on every page</h5>
+    <!-- <h5>This is where a nav bar will go on every page</h5> -->
 
     <p align="right">
       <% if user_signed_in? %>
@@ -21,7 +23,9 @@
       <% end %>
     </p>
 
+  <div class='container'>
     <%= yield %>
+  </div>
 
   </body>
 </html>
