working modal for create new carpool

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -20,7 +20,7 @@ h1{
   // color: red;
 }
 
-.container {
+div .welcome {
   background-image: url('carpool_ad.jpeg');
   background-repeat: repeat;
   background-size: 100%;
