--- a/app/views/carpools/show.html.erb
+++ b/app/views/carpools/show.html.erb
@@ -1,6 +1,7 @@
 <h1><%= @carpool.name %></h1>
 
 <ul>
+  <%= 'This carpool has no members yet!' if @carpool.users.length == 0 %>
   <% @carpool.users.each do |user| %>
     <li><%= user.f_name %> <%= user.l_name %></li>
   <% end %>
