--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -41,3 +41,9 @@ div .welcome {
 //   width: 50%;
 //   height: 50%
 // }
+#carpool-modal-field {
+  border: none;
+  outline: none;
+  border-color: none;
+  vertical-align: middle;
+}
