--- a/app/views/partials/_form_new_carpool.html.erb
+++ b/app/views/partials/_form_new_carpool.html.erb
@@ -1,7 +1,8 @@
+<!-- form for creating a new carpool -->
 <%= form_for [@neighborhood, @carpool] do |f| %>
 
   <div class="field">
-    <%= f.text_field :name %>
+    <%= f.text_field :name, id: 'carpool-modal-field' %>
   </div>
 
   <div class="field">
