--- a/app/views/carpools/show.html.erb
+++ b/app/views/carpools/show.html.erb
@@ -8,11 +8,29 @@
   <% @carpool.users.each do |user| %>
     <li><strong><%= user.f_name %> <%= user.l_name %></strong> car: <%= '&#10004;'.html_safe if user.has_car %> <%= '&#10008;'.html_safe if user.has_car == false %> <%= 'seats: ' if user.has_car %> <%= user.car_seats if user.has_car %></li>
   <% end %>
-
 </ul>
 
-<% unless current_user.carpool %>
-  <%= form_for [@neighborhood, @carpool], :url => join_carpool_path, :html => { :method => :patch } do |f|%>
-    <%= f.submit 'join this carpool!' %>
+<!-- check whether the current user belongs to this carpool -->
+<% if current_user.carpool != @carpool %>
+  <!-- if they don't, check whether they belong to another carpool -->
+  <% if current_user.carpool %>
+    <!-- if they have a carpool, they can't join this one -->
+    <div class="alert alert-info" role="alert">
+      You already belong to a Carpool!
+    </div>
+ <% else %>
+    <!-- if they don't, they can join -->
+    <%= form_for [@neighborhood, @carpool], :url => join_carpool_path, :html => { :method => :patch } do |f|%>
+      <%= f.submit 'join this carpool!' %>
+    <% end %>
   <% end %>
+<% else %>
+  <!-- tell them if they belong to this carpool already -->
+  <div class="alert alert-info" role="alert">
+    You already belong to this Carpool!
+  </div>
 <% end %>
+
+<%# unless current_user.carpool %>
+
+<%# end %>
