--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -4,7 +4,7 @@
   <%= devise_error_messages! %>
 
   <div class="field">
-    <%= f.label (:email, 'Email address') %><br />
+    <%= f.label :email, 'Email address' %><br />
     <%= f.email_field :email, autofocus: true %>
   </div>
 
@@ -22,17 +22,17 @@
   </div>
 
   <div class="field">
-    <%= f.label (:f_name, 'First Name') %><br />
+    <%= f.label :f_name, 'First Name' %><br />
     <%= f.text_field :f_name %>
   </div>
 
   <div class="field">
-    <%= f.label (:l_name, 'Last Name') %><br />
+    <%= f.label :l_name, 'Last Name' %><br />
     <%= f.text_field :l_name %>
   </div>
 
   <div class="field">
-    <%= f.label (:neighborhood, "Where do you live?") %><br />
+    <%= f.label :neighborhood, "Where do you live?" %><br />
     <%= f.collection_select(:neighborhood_id, Neighborhood.all, :id, :name) %>
   </div>
 
