--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,9 +23,14 @@
       <% end %>
     </p>
 
-  <div class='container'>
     <%= yield %>
-  </div>
+    
+    <% flash.each do |key, value| %>
+    <div class="alert alert-<%= key %> alert-dismissible">
+      <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+      <%= value %>
+    </div>
+    <% end %>
 
   </body>
 </html>
