adds carpools index for CRUD purposes, adds edit carpool modal

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -53,10 +53,10 @@ div .welcome {
 //   height: 50%
 // }
 .modal-field {
-  border: none;
-  outline: none;
-  border-color: none;
-  vertical-align: middle;
+  // border: none;
+  // outline: none;
+  // border-color: none;
+  // vertical-align: middle;
 }
 
 .list-group > * {
