--- a/app/views/partials/_form_new_carpool.html.erb
+++ b/app/views/partials/_form_new_carpool.html.erb
@@ -3,12 +3,12 @@
 
   <div class="field">
     <%= f.label :name, 'Carpool Name:' %>
-    <%= f.text_field :name, class: 'modal-field' %>
+    <%= f.text_field :name, class: 'form-control modal-field' %>
   </div>
 
   <div class="field">
     <%= f.label :description, 'Carpool Description:' %>
-    <%= f.text_area :description, class: 'modal-field' %>
+    <%= f.text_area :description, class: 'form-control modal-field', cols: '35', rows: '10' %>
   </div>
 
   <div class="field">
